# hasplay

./: Geometry.hs  README.md  baby.hs  ceshi.yaml  comma.hs  fp.hs  gg.hs  io.hs  pres227-2.hs  pres227.hs  roots.hs  rw.hs  simpleJSON.hs  stern.txt  test.sh  tiger.hs
addition/: Addition.hs  addition.cabal  cabal.sandbox.config
addition/.cabal-sandbox/lib/x86_64-osx-ghc-7.10.3/addition-0.1.0.0-Eu6AI4WWcHXHoJVPdeLlpc/: libHSaddition-0.1.0.0-Eu6AI4WWcHXHoJVPdeLlpc-ghc7.10.3.dylib
addition/.cabal-sandbox/lib/x86_64-osx-ghc-7.10.3/ansi-terminal-0.6.2.3-BDlVdfJGo3VHCIHxPTNjH1/: libHSansi-terminal-0.6.2.3-BDlVdfJGo3VHCIHxPTNjH1-ghc7.10.3.dylib
addition/.cabal-sandbox/lib/x86_64-osx-ghc-7.10.3/hspec-2.2.3-BqgL5DqzUSW6oh1uXut8ug/: libHShspec-2.2.3-BqgL5DqzUSW6oh1uXut8ug-ghc7.10.3.dylib
addition/.cabal-sandbox/lib/x86_64-osx-ghc-7.10.3/hspec-core-2.2.3-C7bkVflXJ4DFySJ53yTmFb/: libHShspec-core-2.2.3-C7bkVflXJ4DFySJ53yTmFb-ghc7.10.3.dylib
addition/.cabal-sandbox/share/doc/x86_64-osx-ghc-7.10.3/: doc-index-124.html  doc-index-33.html  (+36 more)
addition/.cabal-sandbox/x86_64-osx-ghc-7.10.3-packages.conf.d/: addition-0.1.0.0-719c240c57c653218ac11bb14afc44ae.conf  ansi-terminal-0.6.2.3-7b40b18f4e53e6f53c2ffd807e929ca9.conf  hspec-2.2.3-5615c088d799bf52b3b664765d5da177.conf  hspec-core-2.2.3-045070d08105dc7153381c62b0cd0ee8.conf  hspec-discover-2.2.3-1212ed414497cc7e4453b6a5e5f67ade.conf  hspec-expectations-0.7.2-56a244fc2755fa87163ff9606bc7ad97.conf  package.cache  quickcheck-io-0.1.2-1447b51fe5471f5c58d50acdcfa351dc.conf  setenv-0.1.1.3-4d70f2e61b1bd0645017164a0ca26ee9.conf
(+315 files in other folders)
