name:                addition
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/addition#readme
license:             BSD3
license-file:        LICENSE
author:              Li Zhang
maintainer:          zhangli_0102@yahoo.com
copyright:           2016 Li Zhang
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library  
  hs-source-dirs:      .
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, hspec, QuickCheck
  exposed-modules:     Addition
  ghc-options:         -Wall -fwarn-tabs
